--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>作业家JerryPage</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="main.js" rel="stylesheet">
   </head>
 <ons-page ng-controller="helpcenterController as main">
     <ons-toolbar fixed-style>
