--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>作业家JerryPage</title>
     <link href="main.js" rel="stylesheet">
   </head>
-<ons-page ng-controller="helpcenterController as main">
+<ons-page ng-controller="JerryPageController as main">
     <ons-toolbar fixed-style>
         <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
              ng-click="main.backClicked()">
