--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
             <span class="settingLeftSpan">网络信息</span>
             <span class="settingRightSpan">{{main.wifi}}</span>
         </div>
+    </div>
 </ons-page>
