--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="zh">
-  <head>
-    <meta charset="utf-8">
+<html style="touch-action: pan-y;">
+<head>
+    <meta charset="utf-8"/>
     <title>作业家JerryPage</title>
-    <link href="main.js" rel="stylesheet">
-  </head>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <!-- Security policy -->
+    <!-- This policy allows everything (eg CSS, AJAX, object, frame, media, etc) except that
+    * CSS only from the same origin and inline styles,
+    * scripts only from the same origin and inline styles, and eval() -->
+    <meta http-equiv="Content-Security-Policy"
+          content="img-src 'self' data: https:; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
+    <link rel="stylesheet" href="lib/katex/katex.css">
+    <!-- CSS dependencies -->
+    <link rel="stylesheet" href="lib/onsenui/css/onsenui.css"/>
+    <link rel="stylesheet" href="lib/onsen/stylus/customized-theme.css"/>
+    <link rel="stylesheet" href="lib/ui-bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="lib/ui-bootstrap/css/bootstrap-theme.css"/>
+
+    <!-- CSP support mode (required for Windows Universal apps) -->
+    <link rel="stylesheet" href="lib/angular/angular-csp.css"/>
+
+    <!-- Font styles -->
+    <link rel="stylesheet" href="assets/font/font.css"/>
+
+    <!-- Style for this project -->
+    <link rel="stylesheet" href="main.css"/>
+</head>
+
 <ons-page ng-controller="helpcenterController as main">
     <ons-toolbar fixed-style>
         <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
@@ -12,7 +36,7 @@
             <img src="assets/img/left.png">
         </div>
         <div class="center">
-            Jerry's Page,欢迎，{{main.username}}
+            Jerry's Page,欢迎，{{main.user.name}}
         </div>
     </ons-toolbar>
     <div class="whiteBackground biggerFont" style="height: 100%;">
@@ -35,10 +59,6 @@
         <body>
             请检查是否为最新版，联系作者邮箱：Doc@l6wy.onmicrosoft.com，祝您生活愉快！
         </body>
-        <body>
-            "基本信息：",'\n',
-            devicetype={{main.devicetype}},userid={{main.userid}},banji={{main.banji}},school:{{main.school}},codever={{main.codever}},Distver={{main.Distver}}
-        </body>
         <div class="settingItem">
             <span class="settingLeftSpan">姓名</span>
             <span class="settingRightSpan">{{main.user.name}}</span>
@@ -56,8 +76,75 @@
             <span class="settingRightSpan">{{main.banji.allname}}</span>
         </div>
         <div class="settingItem" ng-click="main.getWifi()">
+            <span class="settingLeftSpan">DeviceType</span>
+            <span class="settingRightSpan">{{main.DeviceType}}</span>
+        </div>
+        <div class="settingItem" ng-click="main.getWifi()">
             <span class="settingLeftSpan">网络信息</span>
             <span class="settingRightSpan">{{main.wifi}}</span>
         </div>
     </div>
 </ons-page>
+
+<!-- JS dependencies (order matters!) -->
+<script src="lib/angular/angular.min.js"></script>
+<script src="lib/onsenui/js/onsenui.min.js"></script>
+<script src="lib/onsenui/js/angular-onsenui.min.js"></script>
+<script src="lib/fastclick.js"></script>
+<script src="lib/angular-uuid4-0.3.1/angular-uuid4.js"></script>
+<!--<script src="lib/katex/katex.min.js"></script>-->
+<!--<script src="lib/katex/contrib/auto-render.min.js"></script>-->
+<script src="lib/pako.min.js"></script>
+
+
+<script src="lib/jquery-2.1.4.js"></script>
+<script src="lib/angular/angular-route.js"></script>
+<script src="lib/angular/angular-cookies.js"></script>
+<script src="lib/angular/angular-md5.js"></script>
+<!--<script src="lib/jsencrypt.min.js"></script>-->
+
+<!-- Third party Library -->
+<script src="lib/greensock/jquery.gsap.js"></script>
+
+<script src="lib/angular-local-storage/common.js"></script>
+<script src="lib/angular-local-storage/angular-local-storage.js"></script>
+
+<script src="lib/ui-bootstrap/js/bootstrap.js"></script>
+<script src="lib/ui-bootstrap/ui-bootstrap-tpls-1.0.0.js"></script>
+
+<!-- imagesloaded -->
+<script src="lib/imagesloaded/imagesloaded.pkgd.js"></script>
+<script src="lib/imagesloaded/imagesloaded.pkgd.min.js"></script>
+
+<script src="lib/MLCore-2016.08.15.formatted.js"></script>
+<!-- Student client -->
+<script>
+    window.device = {
+        platform: function () {
+            var u = navigator.userAgent, app = navigator.appVersion;
+            return {         //移动终端浏览器版本信息
+                trident: u.indexOf('Trident') > -1, //IE内核
+                presto: u.indexOf('Presto') > -1, //opera内核
+                webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
+                gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
+                mobile: !!u.match(/AppleWebKit.*Mobile.*/), //是否为移动终端
+                ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
+                android: u.indexOf('Android') > -1, //android终端
+                iPhone: u.indexOf('iPhone') > -1, //是否为iPhone或者QQHD浏览器
+                iPad: u.indexOf('iPad') > -1, //是否iPad
+                webApp: u.indexOf('Safari') == -1, //是否web应该程序，没有头部与底部
+            };
+        }(),
+        language: (navigator.browserLanguage || navigator.language).toLowerCase(),
+    };
+    if (window.device.platform.android) {
+        document.write('<script src=\'cordova/cordova.js\'><' + '/' + 'script>');
+    }
+</script>
+
+<!-- inject:js -->
+<script src="app/main.js"></script>
+<!-- endinject -->
+
+</body>
+</html>
