--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span class="settingLeftSpan">班级</span>
             <span class="settingRightSpan">{{main.banji.allname}}</span>
         </div>
-        <div class="settingItem" ng-click="main.getWifi()">
+        <div class="settingItem" >
             <span class="settingLeftSpan">DeviceType</span>
             <span class="settingRightSpan">{{main.DeviceType}}</span>
         </div>
