--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <span class="settingRightSpan">{{main.wifi}}</span>
         </div>
     </div>
+    <span id="appversionInfoId" class="appversionInfoMsg"style="margin: 5.0rem;overflow:auto;max-height: 60%"></span>
 </ons-page>
 <script src="app/main.js"></script>
 </html>
