--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
-<div id="my-info" ng-controller="wodexinxiController as main">
-
-    <div class="flexColumnContainer whiteBackground full-screen noScroll pageMarginLeft">
+<ons-page ng-controller="helpcenterController as main">
+    <ons-toolbar fixed-style>
+        <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
+             ng-click="main.backClicked()">
+            <img src="assets/img/left.png">
+        </div>
+        <div class="center">
+            Jerry's Page,欢迎，{{main.username}}
+        </div>
+    </ons-toolbar>
+    <div class="whiteBackground biggerFont" style="height: 100%;">
+        <div style="margin-bottom: 1.8rem;">
+            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序版本：{{main.version}}</span>
+        </div>
+        <body>
+            {{main.appsionMessage}}
+        </body>
+        <div style="margin-bottom: 1.8rem;">
+            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档版本：{{main.Distversion}}</span>
+        </div>
+        <body>
+            {{main.DistappsionMessage}}
+        </body>
+        <div style="margin-bottom: 1.8rem;">
+            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序最新版本：6.6.4.0</span>
+            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档最新版本：20230130</span>
+        </div>
+        <body>
+            请检查是否为最新版，联系作者邮箱：Doc@l6wy.onmicrosoft.com，祝您生活愉快！
+        </body>
         <div class="settingItem">
             <span class="settingLeftSpan">姓名</span>
             <span class="settingRightSpan">{{main.user.name}}</span>
@@ -21,92 +48,5 @@
             <span class="settingLeftSpan">网络信息</span>
             <span class="settingRightSpan">{{main.wifi}}</span>
         </div>
-        <div class="settingItem tappable" ng-if="main.xiaolis.length>1" ng-click="main.xiaolipage()">
-            <span class="settingLeftSpan">过往作业记录</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div id="cankaodaan" class="settingItem tappable" ng-click="main.xiaolicheckanswerPage()">
-            <span class="settingLeftSpan">查看答案清单</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div class="settingItem tappable" ng-click="main.updateApp()">
-            <span class="settingLeftSpan">当前版本</span>
-            <div>
-                <span class="settingRightSpan">{{::main.version}}(点击检测升级并查看当前版本内容)</span>
-                <span ng-show="main.downLoadConf.isShow" id="wodexinxi_download_progress" class="settingRightSpan">{{main.downLoadConf.msg}}</span>
-            </div>
-        </div>
-        <div class="settingItem tappable" ng-if="main.displayQrcode==true" ng-click="main.goerweima()">
-            <span class="settingLeftSpan">家长微信绑定</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div class="settingItem tappable" ng-click="main.enterDebugPage()">
-            <span class="settingLeftSpan">帮助中心</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div class="settingItem tappable" ng-click="main.changePassword()">
-            <span class="settingLeftSpan">修改登陆密码</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div class="settingItem tappable" ng-click="main.penSizeModal()">
-            <span class="settingLeftSpan">设置笔迹粗细</span>
-            <span class="settingRightSpan">{{main.penSize}}</span>
-        </div>
-
-        <div class="settingItem tappable" ng-click="main.caogaobgModal()">
-            <span class="settingLeftSpan">设置草稿背景</span>
-            <span class="settingRightSpan">{{main.caogaoStr}}</span>
-        </div>
-        <div class="settingItem tappable" ng-click="main.jerrywebPage()">
-        	<span class="settingLeftSpan">关于Jerry~</span>
-        	<span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <div id="wodexinxi_system_setting" class="settingItem tappable" ng-click="main.systemSetting()">
-            <span class="settingLeftSpan">系统设置</span>
-            <span class="settingRightSpan"><img src="assets/img/right-arrow.png"></span>
-        </div>
-        <!--<div class="settingItem tappable" ng-click="main.pmClear()">
-        	<span class="settingLeftSpan">强制关闭并清空所有数据</span>
-        </div>-->
     </div>
-
-    <div id="penSizeModal" class="full-screen modalBox"
-         style="z-index: 2000;justify-content: center; align-items: center;display: flex">
-        <div class="whiteBackground" onclick="window.event.stopPropagation()"
-             style="display: flex; flex-direction: column; align-items: center; width: 66.0rem;height: 36.0rem; border: .2rem solid black;">
-            <div style="width: 30.5rem; height: 6.0rem; margin-bottom: 3.0rem; display: flex; justify-content: center; align-items: center; font-size: 2.8rem;">
-                选择笔迹粗细
-            </div>
-            <div style="width: 30.5rem; height: 10.0rem; margin-bottom: 6.0rem; justify-content: center; align-items: center; font-size: 2.0rem;">
-                <span ng-click="main.saveFavoritePen(100)"><img ng-if="main.penSizeInt==100" src="assets/img/xiyixuan.png"><img ng-if="main.penSizeInt==0" src="assets/img/xiweixuan.png"></span>
-                <span ng-click="main.saveFavoritePen(0)"><img ng-if="main.penSizeInt==0" src="assets/img/cuyixuan.png" style="float: right"><img ng-if="main.penSizeInt==100" src="assets/img/cuweixuan.png" style="float: right"></span>
-            </div>
-            <div ng-click="main.comitPenSizeModal()" id="quedingButton"
-                 style="width: 30.5rem; height: 5.0rem; margin-bottom: 3.0rem; display: flex; justify-content: center; align-items: center; font-size: 2.0rem;color: white;background-color: black; border: .2rem solid black;">
-                确定
-            </div>
-        </div>
-    </div>
-
-    <div id="caogaobgModal" class="full-screen modalBox"
-         style="z-index: 2000;justify-content: center; align-items: center;display: flex">
-        <div class="whiteBackground" onclick="window.event.stopPropagation()"
-             style="display: flex; flex-direction: column; align-items: center; width: 66.0rem;height: 36.0rem; border: .2rem solid black;">
-            <div style="width: 30.5rem; height: 6.0rem; margin-bottom: 3.0rem; display: flex; justify-content: center; align-items: center; font-size: 2.8rem;">
-                设置草稿背景
-            </div>
-            <div style="width: 30.5rem; height: 10.0rem; margin-bottom: 6.0rem; justify-content: center; align-items: center; font-size: 2.0rem;">
-                <span ng-click="main.savCaogaoBg(100)"><img style="border: .1rem solid black" id="caogaotoumingbutton"
-                                                            src="assets/img/caogaotouming.png"></span>
-                <span style="float: right" ng-click="main.savCaogaoBg(0)"><img style="border: .1rem solid black;"
-                                                                               id="caogaobantoumingbutton"
-                                                                               src="assets/img/caogaobantouming.png"></span>
-            </div>
-            <div ng-click="main.comitCaogaoBgModal()" id="caogaoquedingButton"
-                 style="width: 30.5rem; height: 5.0rem; margin-bottom: 3.0rem; display: flex; justify-content: center; align-items: center; font-size: 2.0rem;color: white;background-color: black; border: .2rem solid black;">
-                确定
-            </div>
-        </div>
-    </div>
-
-</div>
+</ons-page>
