--- a/index.html
+++ b/index.html
@@ -1,56 +1,59 @@
-    <div class="whiteBackground biggerFont" style="height: 100%;" ng-controller="helpcenterController as main">
-        <ons-page>
-            <ons-toolbar fixed-style>
-                <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
-                     ng-click="main.backClicked()">
-                    <img src="assets/img/left.png">
-                </div>
-                <div class="center">
-                    Jerry's Page,欢迎，{{main.username}}
-                </div>
-            </ons-toolbar>
-        </ons-page>
-        <div style="margin-bottom: 1.8rem;">
-            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序版本：{{main.version}}</span>
-        </div>
-        <body>
-            {{main.appsionMessage}}
-        </body>
-        <div style="margin-bottom: 1.8rem;">
-            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档版本：{{main.Distversion}}</span>
-        </div>
-        <body>
-            {{main.DistappsionMessage}}
-        </body>
-        <div style="margin-bottom: 1.8rem;">
-            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序最新版本：6.6.4.0</span>
-            <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档最新版本：20230130</span>
-        </div>
-        <body>
-            请检查是否为最新版，联系作者邮箱：Doc@l6wy.onmicrosoft.com，祝您生活愉快！
-        </body>
-        <div class="settingItem">
-            <span class="settingLeftSpan">姓名</span>
-            <span class="settingRightSpan">{{main.user.name}}</span>
-        </div>
-        <div class="settingItem">
-            <span class="settingLeftSpan">账号</span>
-            <span class="settingRightSpan">{{main.user.user}}</span>
-        </div>
-        <div class="settingItem">
-            <span class="settingLeftSpan">学校</span>
-            <span class="settingRightSpan">{{main.schoolname}}</span>
-        </div>
-        <div class="settingItem">
-            <span class="settingLeftSpan">班级</span>
-            <span class="settingRightSpan">{{main.banji.allname}}</span>
-        </div>
-        <div class="settingItem">
-            <span class="settingLeftSpan">DeviceType</span>
-            <span class="settingRightSpan">{{main.devicetype}}</span>
-        </div>
-        <div class="settingItem" ng-click="main.getWifi()">
-            <span class="settingLeftSpan">网络信息</span>
-            <span class="settingRightSpan">{{main.wifi}}</span>
-        </div>
+<div class="whiteBackground biggerFont" style="height: 100%;" ng-controller="helpcenterController as main">
+    <!--<ons-page>
+        <ons-toolbar fixed-style>
+            <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
+                ng-click="main.backClicked()">
+                <img src="assets/img/left.png">
+            </div>
+            <div class="center">
+                Jerry's Page,欢迎，{{main.username}}
+            </div>
+        </ons-toolbar>
+    </ons-page>-->
+    <div style="margin-bottom: 1.8rem;">
+        <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序版本：{{main.version}}</span>
     </div>
+
+    <body>
+        {{main.appsionMessage}}
+    </body>
+    <div style="margin-bottom: 1.8rem;">
+        <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档版本：{{main.Distversion}}</span>
+    </div>
+
+    <body>
+        {{main.DistappsionMessage}}
+    </body>
+    <div style="margin-bottom: 1.8rem;">
+        <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序最新版本：6.6.4.0</span>
+        <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的Dist文档最新版本：20230130</span>
+    </div>
+
+    <body>
+        请检查是否为最新版，联系作者邮箱：Doc@l6wy.onmicrosoft.com，祝您生活愉快！
+    </body>
+    <div class="settingItem">
+        <span class="settingLeftSpan">姓名</span>
+        <span class="settingRightSpan">{{main.user.name}}</span>
+    </div>
+    <div class="settingItem">
+        <span class="settingLeftSpan">账号</span>
+        <span class="settingRightSpan">{{main.user.user}}</span>
+    </div>
+    <div class="settingItem">
+        <span class="settingLeftSpan">学校</span>
+        <span class="settingRightSpan">{{main.schoolname}}</span>
+    </div>
+    <div class="settingItem">
+        <span class="settingLeftSpan">班级</span>
+        <span class="settingRightSpan">{{main.banji.allname}}</span>
+    </div>
+    <div class="settingItem">
+        <span class="settingLeftSpan">DeviceType</span>
+        <span class="settingRightSpan">{{main.devicetype}}</span>
+    </div>
+    <div class="settingItem" ng-click="main.getWifi()">
+        <span class="settingLeftSpan">网络信息</span>
+        <span class="settingRightSpan">{{main.wifi}}</span>
+    </div>
+</div>
