--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div id="my-info" class="whiteBackground biggerFont" style="height: 100%;" ng-controller="helpcenterController as main">
+<div id="my-info" class="whiteBackground biggerFont" style="height: 100%;" ng-controller="wodexinxiController as main">
     <!--<ons-page>
         <ons-toolbar fixed-style>
             <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
