--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<ons-page>
+<!--<ons-page>-->
 <div class="whiteBackground biggerFont" style="height: 100%;" ng-controller="JerryPageController as main">
-        <ons-toolbar fixed-style>
+        <!--<ons-toolbar fixed-style>
             <div style="border-right: 0px;" class="left flexCenter flexColumnContainer tappable"
                 ng-click="main.backClicked()">
                 <img src="assets/img/left.png">
@@ -8,7 +8,7 @@
             <div class="center">
                 Jerry's Page，欢迎，{{main.user.name}}！
             </div>
-        </ons-toolbar>
+        </ons-toolbar>-->
     <div style="margin-bottom: 1.8rem;">
         <span class='elllipsis2line' style='font-size: 3rem; font-weight: 600;'>当前的主程序版本：{{main.version}}</span>
     </div>
@@ -70,4 +70,4 @@
         s.isAndroid information ::  {{main.isAndroid}}
     </body>
 </div>
-</ons-page>
+<!--</ons-page>-->
